--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: ["Victor Suciu's portfolio website"]
+description: To showcase my skills to my future employer.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
