--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: ["Victor Suciu's portfolio website"]
-description: To showcase my skills to my future employer.
+title: [Victor Suciu's portfolio website]
+description: [To showcase my skills to my future employer.]
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
